--- a/reddit/graphPaperBounds.html
+++ b/reddit/graphPaperBounds.html
@@ -3,7 +3,8 @@
   	<meta charset = "UTF-8">
   	<meta name="author" content="OddlySpecificMath">
   	<meta name="date" content="2023/10/22">
-
+    <!-- posted to https://www.reddit.com/r/desmos/comments/17e6l6h/using_desmos_api_to_get_active_axes/ -->
+    
     <title>Retrieve (top,bottom,left,right) boundaries for Desmos graphPaper / output panel</title>
     <script src="https://www.desmos.com/api/v1.8/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
     <!-- Desmos' public development apiKey; see docs for keys for production -->
